--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,15 +1,28 @@
 <html>
 <head>
-<meta charset="UTF-8">
-<link
+	<meta charset="UTF-8">
+	<link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
 	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 	crossorigin="anonymous">
-
+	<link rel="stylesheet" href="styles/jumbotron.css">
 </head>
 <body>
 	<div class="container">
+		<div class="jumbotron">
+			<h1 class="display-4">Meus Pedidos</h1>
+		</div>
+		<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between container-fluid mb-3">
+			<div class="navbar-nav">
+       		 	<a class="nav-item nav-link active" aria-current="page" href="#">Todos</a>
+        		<a class="nav-item nav-link" href="#">Aguardando</a>
+        		<a class="nav-item nav-link" href="#">Aprovado</a>
+        		<a class="nav-item nav-link">Entregue</a>
+      		</div>
+      		<a href="/pedido/formulario"><button class="btn btn-outline-secondary">Novo</button></a>
+		</nav>
+		
 		<div class="card" th:each="pedido : ${pedidos}">
 			<div class="card-header" th:text="${pedido.nomeProduto}">Nome
 				do produto</div>
