--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,41 +1,23 @@
 <html>
-<head>
-	<meta charset="UTF-8">
-	<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
-	<link rel="stylesheet" href="styles/jumbotron.css">
-</head>
+<head th:replace="~{base :: head}"></head>
 <body>
+	<div th:replace="~{base :: logo}"></div>
 	<div class="container">
-		<div class="jumbotron">
-			<h1 class="display-4">Meus Pedidos</h1>
-		</div>
-		<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between container-fluid mb-3">
-			<div class="navbar-nav">
-       		 	<a class="nav-item nav-link active" aria-current="page" href="#">Todos</a>
-        		<a class="nav-item nav-link" href="#">Aguardando</a>
-        		<a class="nav-item nav-link" href="#">Aprovado</a>
-        		<a class="nav-item nav-link">Entregue</a>
-      		</div>
-      		<a href="/pedido/formulario"><button class="btn btn-outline-secondary">Novo</button></a>
-		</nav>
+		<div th:replace="~{base :: titulo('Últimos Pedidos')}"></div>
 		
-		<div class="card" th:each="pedido : ${pedidos}">
-			<div class="card-header" th:text="${pedido.nomeProduto}">Nome
-				do produto</div>
+		
+		<div class="card mt-3" th:each="pedido : ${pedidos}">
+				<div class="card-header alert-dark" th:text="${pedido.nomeProduto}">Nome do produto</div>
 
 			<div class="card-body">
 				<div class="row">
 					<div class="col-12 col-sm-8 mb-3">
 						<div class="row">
 							<div class="col-md-5">
-								Valor: <span th:text="${pedido.valorNegociado}">200,99</span>
+								Valor: <span th:if="${pedido.valorNegociado} != null" th:text="${'R$ '+#numbers.formatDecimal(pedido.valorNegociado,3,'POINT',2,'COMMA')}">200,99</span>
 							</div>
 							<div class="col-md-7">
-								Data de Entrega: <span th:text="${pedido.dataDaEntrega}">10/02/2022</span>
+								Data de Entrega: <span th:text="${#temporals.format(pedido.dataDaEntrega, 'dd/MM/yyyy')}">10/02/2022</span>
 							</div>
 						</div>
 						<div>Produto</div>
