--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -1,20 +1,11 @@
 <html>
-<head>
-	<meta charset="UTF-8">
-	<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
-	<link rel="stylesheet" href="../../styles/jumbotron.css">
-</head>
+<head th:replace="~{base :: head}"></head>
 <body>
+	<div th:replace="~{base :: logo}"></div>
 	<div class="container">
-		<div class="jumbotron">
-			<h1 class="display-4">Novo Pedido</h1>
-		</div>
+		<div th:replace="~{base :: titulo('Novo Pedido')}"></div>
 		<div class="card mt-3">
-			<form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
+			<form th:object="${requisicaoNovoPedido}" class="card-body" th:action="@{/pedido/novo}" method="POST">
 				<div class="mt-2">
 					<label for="nomeProduto" class="form-label">Produto</label>
 					<input th:field="*{nomeProduto}" th:errorclass="is-invalid" class="form-control" placeholder="nome do produto"/>
