--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 	<div class="container">
 		<div th:replace="~{base :: titulo('Login')}"></div>
 		
-		<div class="card mb-3">
+		<div class="card mt-3">
 
 			<form th:action="@{/login}" method="post" class="card-body">
 				<div class="mt-2">
